# bugsweep

./: .coverage  .coverage-thresholds.json  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  SKILL.md  install.sh  pyproject.toml
.github/workflows/: pages.yml
.metaswarm/: external-tools.yaml  project-profile.json
bench/: README.md  run.sh
bench/corpus/: schema.json
bench/docker/: .gitignore  Dockerfile  Dockerfile.proxy  build.sh  docker-entrypoint.sh
bench/lib/: cost.sh  isolate.sh  proxy.sh  sandbox.sh  scrub.sh  validate_case.sh
config/: bugsweep.config.json
docs/: index.html
prompts/: challenge.md  context-build.md  fix.md  hunt.md  referee.md  repro.md  research.md
references/: autonomous-maintenance.md  context-and-continuity.md  no-tests.md  orchestrator.md  priority-intelligence.md  safety-rationale.md  tuning.md
schemas/: priority-application.schema.json  priority-context.schema.json  recon-plan.schema.json  run-summary.schema.json  session-summary.schema.json
scripts/: _analyzer_norm.py  _mark_batch_covered.py  _priority_context.py  _priority_report.py  _run_summary_reduce.py  _session_summary_reduce.py  aggregate-summaries.sh  analyzers.sh  bugsweep-cleanup.sh  bugsweep-prepare.sh  common.sh  conclusions.sh  finalize.sh  git-history-risk.sh  graph.sh  guard.sh  integrate.sh  mark-batch-covered.sh  partition.sh  preflight.sh  priority-context.sh  reachability.sh  recon-plan.sh  repro.sh  run_checks.sh  session.sh  state.sh  summarize.sh  symbols.sh  variants.sh
(+232 files in other folders)
